Fix opensource build. 	Change on 2015/01/07 by ctiller <ctiller@google.com> ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=83469328

--- a/templates/Makefile.template
+++ b/templates/Makefile.template
@@ -100,7 +100,7 @@ CPPFLAGS += -g -fPIC -Wall -Werror -Wno-long-long
 LDFLAGS += -g -pthread -fPIC
 
 INCLUDES = . include gens
-LIBS = rt m z event event_pthreads pthread
+LIBS = rt m z pthread
 LIBSXX = protobuf
 LIBS_PROTOC = protoc protobuf
 
@@ -159,19 +159,11 @@ else
 IS_GIT_FOLDER = true
 endif
 
-EVENT2_CHECK_CMD = $(CC) $(CFLAGS) $(CPPFLAGS) -o /dev/null test/build/event2.c -levent $(LDFLAGS)
 OPENSSL_ALPN_CHECK_CMD = $(CC) $(CFLAGS) $(CPPFLAGS) -o /dev/null test/build/openssl-alpn.c -lssl -lcrypto -ldl $(LDFLAGS)
 ZLIB_CHECK_CMD = $(CC) $(CFLAGS) $(CPPFLAGS) -o /dev/null test/build/zlib.c -lz $(LDFLAGS)
 
-HAS_SYSTEM_EVENT2 = $(shell $(EVENT2_CHECK_CMD) 2> /dev/null && echo true || echo false)
 HAS_SYSTEM_OPENSSL_ALPN = $(shell $(OPENSSL_ALPN_CHECK_CMD) 2> /dev/null && echo true || echo false)
 HAS_SYSTEM_ZLIB = $(shell $(ZLIB_CHECK_CMD) 2> /dev/null && echo true || echo false)
-
-ifeq ($(wildcard third_party/libevent/include/event2/event.h),)
-HAS_EMBEDDED_EVENT2 = false
-else
-HAS_EMBEDDED_EVENT2 = true
-endif
 
 ifeq ($(wildcard third_party/openssl/ssl/ssl.h),)
 HAS_EMBEDDED_OPENSSL_ALPN = false
@@ -183,12 +175,6 @@ ifeq ($(wildcard third_party/zlib/zlib.h),)
 HAS_EMBEDDED_ZLIB = false
 else
 HAS_EMBEDDED_ZLIB = true
-endif
-
-ifneq ($(SYSTEM),MINGW32)
-ifeq ($(HAS_SYSTEM_EVENT2),false)
-DEP_MISSING += libevent
-endif
 endif
 
 ifeq ($(HAS_SYSTEM_ZLIB),false)
@@ -291,7 +277,6 @@ ${tgt.name}: bins/$(CONFIG)/${tgt.name}
 % endfor
 
 run_dep_checks:
-	$(EVENT2_CHECK_CMD) || true
 	$(OPENSSL_ALPN_CHECK_CMD) || true
 	$(ZLIB_CHECK_CMD) || true
 
