Corrects the ruby dockerfile to ensure it has access to git-on-[].
Adds a command for triggering a pull of the latest built docker images.
	Change on 2015/01/09 by temiola <temiola@google.com>
-------------
Created by MOE: http://code.google.com/p/moe-java
MOE_MIGRATED_REVID=83641150

--- a/tools/dockerfile/grpc_ruby/Dockerfile
+++ b/tools/dockerfile/grpc_ruby/Dockerfile
@@ -1,6 +1,9 @@
 # Dockerfile for gRPC Ruby
 FROM grpc/ruby_base
 
+# Start the daemon that allows access to the protected git-on-borg repos
+RUN /var/local/git/gcompute-tools/git-cookie-authdaemon
+
 RUN cd /var/local/git/grpc \
   && git pull --recurse-submodules \
   && git submodule update --init --recursive
