--- a/vsprojects/vs2013/gpr_test_util.vcxproj
+++ b/vsprojects/vs2013/gpr_test_util.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{17BCAFC0-5FDC-4C94-AEB9-95F3E220614B}</ProjectGuid>
+    <ProjectGuid>{EAB0A629-17A9-44DB-B5FF-E91A721FE037}</ProjectGuid>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -73,29 +73,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\test\core\end2end\cq_verifier.c">
-    </ClCompile>
-    <ClCompile Include="..\..\test\core\end2end\data\test_root_cert.c">
-    </ClCompile>
-    <ClCompile Include="..\..\test\core\end2end\data\prod_roots_certs.c">
-    </ClCompile>
-    <ClCompile Include="..\..\test\core\end2end\data\server1_cert.c">
-    </ClCompile>
-    <ClCompile Include="..\..\test\core\end2end\data\server1_key.c">
-    </ClCompile>
-    <ClCompile Include="..\..\test\core\iomgr\endpoint_tests.c">
-    </ClCompile>
-    <ClCompile Include="..\..\test\core\statistics\census_log_tests.c">
-    </ClCompile>
-    <ClCompile Include="..\..\test\core\transport\transport_end2end_tests.c">
-    </ClCompile>
-    <ClCompile Include="..\..\test\core\util\grpc_profiler.c">
-    </ClCompile>
-    <ClCompile Include="..\..\test\core\util\port_posix.c">
-    </ClCompile>
-    <ClCompile Include="..\..\test\core\util\parse_hexstring.c">
-    </ClCompile>
-    <ClCompile Include="..\..\test\core\util\slice_splitter.c">
+    <ClCompile Include="..\..\test\core\util\test_config.c">
     </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
