Moving the google-internal security code in their own files. Checked that the opensource version still builds.
Just addressing core for now. We will do c++ later.
	Change on 2015/01/12 by jboeuf <jboeuf@google.com>
-------------
Created by MOE: http://code.google.com/p/moe-java
MOE_MIGRATED_REVID=83804014

--- a/vsprojects/vs2013/grpc.vcxproj
+++ b/vsprojects/vs2013/grpc.vcxproj
@@ -175,6 +175,8 @@
     </ClCompile>
     <ClCompile Include="..\..\src\core\security\credentials.c">
     </ClCompile>
+    <ClCompile Include="..\..\src\core\security\factories.c">
+    </ClCompile>
     <ClCompile Include="..\..\src\core\security\google_root_certs.c">
     </ClCompile>
     <ClCompile Include="..\..\src\core\security\json_token.c">
