--- a/templates/tools/run_tests/tests.json.template
+++ b/templates/tools/run_tests/tests.json.template
@@ -4,5 +4,6 @@ import json
 
 ${json.dumps([{"name": tgt.name, "language": tgt.language}
               for tgt in targets
-              if tgt.build == "test" and tgt.name[-5:] == "_test"])}
+              if tgt.build == "test" and tgt.name[-5:] == "_test"],
+             sort_keys=True, indent=4)}
 
