added grpc extension library for C#

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,11 @@ coverage
 # python compiled objects
 *.pyc
 
+#eclipse project files
+.cproject
+.project
+.settings
+
 # cache for run_tests.py
 .run_tests_cache
 
